feat: implement batch-wise inventory sync, bulk operations, and global price updates