@@ -5,8 +5,9 @@ import com.hospital.pharmacy_erp.repository.MedicineRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
+import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AlertService {
@@ -14,17 +15,17 @@ public class AlertService {
     @Autowired
     private MedicineRepository medicineRepository;
 
-    // List all medicines that are already expired
     public List<Medicine> getExpiredList() {
+        Date today = new Date();
         return medicineRepository.findAll().stream()
-                .filter(m -> m.getExpiryDate() != null && m.getExpiryDate().isBefore(LocalDate.now()))
-                .toList();
+                .filter(m -> m.getExpiryDate() != null
+                        && m.getExpiryDate().before(today)) // ✅
+                .collect(Collectors.toList());
     }
 
-    // List medicines reaching threshold (Safety Stock)
     public List<Medicine> getReorderList() {
         return medicineRepository.findAll().stream()
                 .filter(m -> m.getStockQuantity() < m.getMinStockLevel())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
